293-fix: Mobile menu layout bugs (#307)
* fix: add bottom padding to mobile menu

* fix: 293 - burger overlay

* fix: 293 - after review

---------

--- a/src/app/components/mobile-view/mobile-view.scss
+++ b/src/app/components/mobile-view/mobile-view.scss
@@ -7,6 +7,7 @@
   justify-content: flex-start;
 
   width: 100%;
+  padding-bottom: 16px;
 
   .main-link {
     font-size: 16px;
