--- a/src/features/base-layout/components/header/burger/burger.module.scss
+++ b/src/features/base-layout/components/header/burger/burger.module.scss
@@ -58,6 +58,7 @@
 
   &.open {
     display: block;
+    background-color: white;
 
     .top {
       transform: rotate(-45deg) translate(-5px, 6px);
